# bernard-scratch

./: .gitignore  Cargo.toml  README.md  pubspec.yaml  rustfmt.toml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/bernard_base/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/scrap/: Cargo.toml
native/scrap-ffi/: Cargo.toml  build.rs
native/scrap-ffi/src/: lib.rs
native/scrap/src/: lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
